[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scene/UIComponents/Textbox.gd" type="Script" id=1]
[ext_resource path="res://assets/profiles/lily.png" type="Texture" id=2]
[ext_resource path="res://src/Scene/UIComponents/Desaturate.tres" type="Material" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Desaturate"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:material:shader_param/saturation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:material:shader_param/saturation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Textbox" type="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
rect_min_size = Vector2( 640, 80 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Panels" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -40.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Panels"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
color = Color( 0, 0, 0, 1 )

[node name="Back" type="TextureRect" parent="Panels/Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -35.0
margin_right = 35.0
margin_bottom = 35.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile" type="TextureRect" parent="Panels/Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="ColorRect" parent="Panels"]
margin_left = 80.0
margin_right = 560.0
margin_bottom = 80.0
rect_min_size = Vector2( 480, 0 )
color = Color( 0, 0, 0, 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="Panels/Center"]
self_modulate = Color( 0.470588, 0.470588, 1, 1 )
margin_right = 100.0
margin_bottom = 20.0
patch_margin_left = 7
patch_margin_top = 6
patch_margin_right = 9
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panels/Center"]
margin_right = 100.0
margin_bottom = 20.0
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speech" type="Label" parent="Panels/Center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -15.0
margin_right = 230.0
margin_bottom = 35.0
autowrap = true

[node name="Right" type="ColorRect" parent="Panels"]
margin_left = 560.0
margin_right = 640.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
color = Color( 0, 0, 0, 1 )

[node name="TextOptions" type="VBoxContainer" parent="Panels/Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -28.0
margin_right = 21.0
margin_bottom = 28.0
custom_constants/separation = 16

[node name="next" type="Button" parent="Panels/Right/TextOptions"]
margin_right = 42.0
margin_bottom = 20.0
text = "Next"

[node name="skip" type="Button" parent="Panels/Right/TextOptions"]
visible = false
margin_top = 36.0
margin_right = 42.0
margin_bottom = 56.0
text = "Skip"

[node name="RightProfile" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -340.0
margin_bottom = -40.0
mouse_filter = 2
expand = true
stretch_mode = 1

[node name="LeftProfile" type="TextureRect" parent="."]
material = ExtResource( 3 )
margin_left = 50.0
margin_top = -300.0
margin_right = 262.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeftProfile"]
anims/Desaturate = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="Panels/Right/TextOptions/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Panels/Right/TextOptions/skip" to="." method="_on_skip_pressed"]
